--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tunkatom Main</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href=static/main.css />
+    <link rel="stylesheet" type="text/css" media="screen" href=static/index.css />
   </head>
 </head>
 <html>
