Added links and beautified it

--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
             <p>This is a test</p>
         </div>
         <div class="gridContainer">
-            
+            <div class="grid1">
+                <a href="https://github.com/Tunkatom">
+                    <img src="https://image.flaticon.com/icons/svg/25/25231.svg" style="width: 100px;height: 100px">
+                </a>
+            </div>
+            <div class="grid2">
+                <a href="https://gitlab.com/Tunkatom">
+                    <img src="https://img.icons8.com/color/1600/gitlab.png" style="width: 100px;height: 100px">
+                </a>
+            </div>
         </div>
     </body>
 </html>
