Fixed spacing error

--- a/projects.html
+++ b/projects.html
@@ -16,11 +16,11 @@
 
             <div class="links">
                 <div class="link1">
-                    <a href="index.html">Home</div></a></div>
+                    <a href="index.html"><p>Home</p></div></a>
                 <div class="link2">
                     <a href="aboutme.html"><p>About Me</p></a></div>
                 <div class="link3">
-                    <a href="projects.html"><div class="active"><p>Projects</p></a></div>
+                    <a href="projects.html"><div class="active"><p>Projects</p></div></a></div>
             </div>
         </div>
         There will be things here later
