--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
 
             <div class="links">
                 <div class="link1">
-                    <a href="index.html">Home</a></div>
+                    <a href="index.html"><p>Home</p></a></div>
                 <div class="link2">
                     <a href="aboutme.html"><div class="active"><p>About Me</p></div></a></div>
                 <div class="link3">
