worked on projects page

--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,6 @@
             <div class="logo">
                 <p>Logo will be here</p>
             </div>
-
             <div class="links">
                 <div class="link1">
                     <a href="index.html"><p>Home</p></div></a>
@@ -23,6 +22,16 @@
                     <a href="projects.html"><div class="active"><p>Projects</p></div></a></div>
             </div>
         </div>
-        There will be things here later
+
+        <div class="projectBox">
+            <div class="projectWhiskey">
+                <p><a href="https://mydadbeats.me" target="_blank">Mydadbeats.me</a> 
+                is a project co-owned between me and four other friends</p>
+            </div>
+            <div class="projectGame">
+                <p>There might be a game I could be developing eventually</p>
+            </div>
+        </div>
+
     </body>
 </html>
