Added SPCC ePortfolio, added mixins

--- a/projects.html
+++ b/projects.html
@@ -25,13 +25,15 @@
 
         <div class="projectBox">
             <div class="projectWhiskey">
-                <p><a href="https://mydadbeats.me" target="_blank">Mydadbeats.me</a> 
+                    <p><a href="https://mydadbeats.me" target="_blank">mydadbeats.me</a> 
                 is a project co-owned between me and four other friends</p>
-            </div>
+               </div>
             <div class="projectGame">
-                <p>There might be a game I could be developing eventually</p>
-            </div>
+                    <p>There might be a game I could be developing eventually</p>
+                </div>
+            <div class="SPCCeportfolio">
+                    <p><a href="https://tunkatom.github.io/ThomasZSPCC2022eportfolio/" target="_blank">My SPCC ePortfolio</a></p>
+                </div>
         </div>
-
     </body>
 </html>
