Optimized some code

--- a/projects.html
+++ b/projects.html
@@ -24,14 +24,14 @@
         </div>
 
         <div class="projectBox">
-            <div class="projectWhiskey">
+            <div class="projectItem">
                     <p><a href="https://mydadbeats.me" target="_blank">mydadbeats.me</a> 
                 is a project co-owned between me and four other friends</p>
                </div>
-            <div class="projectGame">
+            <div class="projectItem">
                     <p>There might be a game I could be developing eventually</p>
                 </div>
-            <div class="SPCCeportfolio">
+            <div class="projectItem">
                     <p><a href="https://tunkatom.github.io/ThomasZSPCC2022eportfolio/" target="_blank">My SPCC ePortfolio</a></p>
                 </div>
         </div>
