--- a/aboutme.html
+++ b/aboutme.html
@@ -22,6 +22,8 @@
                     <a href="projects.html"><p>Projects</p></a></div>
             </div>
         </div>
-        There will be things here later
+        <div class="text">
+            I'm a student at UCEC, I play piano, I code this website, and I kinda make music.
+        </div>
     </body>
 </html>
